# ssign

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  sign-demo.yml  sign-windows.yml
docs/: simplysign-protocol.md
src/: asn1.rs  auth.rs  authenticode.rs  main.rs  msi.rs  sign.rs  timestamp.rs
ssign-core/: Cargo.toml
ssign-core/src/: authenticode.rs  card.rs  client.rs  lib.rs  otp.rs  session.rs  sign.rs  timestamp.rs
ssign-core/tests/fixtures/: selftest_cert.der  selftest_cert.pem
ssign-pkcs11/: Cargo.toml
ssign-pkcs11/src/: lib.rs
ssign-pkcs11/tests/: sign-all-formats.sh
tests/fixtures/: selftest_key.pem  test.msi
