[package]
name = "ssign"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Cross-platform CLI to Authenticode-sign Windows binaries with a Certum SimplySign cloud certificate — no GUI, no vendor stack."
license = "MIT"
repository = "https://github.com/Le-Syl21/ssign"
homepage = "https://github.com/Le-Syl21/ssign"
documentation = "https://docs.rs/ssign"
readme = "README.md"
keywords = ["authenticode", "code-signing", "certum", "simplysign", "windows"]
categories = ["command-line-utilities", "cryptography"]
# Keep test fixtures (big binaries + a throwaway self-signed key) and CI config
# out of the published crate. src/certs/*.der is embedded code, so it stays.
exclude = ["tests/fixtures/*", ".github/*"]

[[bin]]
name = "ssign"
path = "src/main.rs"

[package.metadata.docs.rs]
# ssign is a binary crate; still let docs.rs build the crate docs cleanly.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow = "1"
base32 = "0.5"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "multipart", "rustls-tls"] }
serde_json = "1"
regex = "1"
hex = "0.4"
cfb = "0.10"
uuid = "1"
x509-cert = "0.2"
der = { version = "0.7", features = ["pem"] }

[dev-dependencies]
rsa = { version = "0.9", features = ["sha2", "pem"] }
