[workspace]
members = ["ssign-core", "ssign-pkcs11"]

[package]
name = "ssign"
version = "0.1.1"
edition = "2021"
description ="Cross-platform CLI to Authenticode-sign Windows binaries with a Certum SimplySign cloud certificate — no GUI, no vendor stack."
license = "MIT"
repository = "https://github.com/Le-Syl21/ssign"
homepage = "https://github.com/Le-Syl21/ssign"
documentation = "https://docs.rs/ssign"
readme = "README.md"
keywords = ["authenticode", "code-signing", "certum", "simplysign", "windows"]
categories = ["command-line-utilities", "cryptography"]
exclude = [".github/*"]

[[bin]]
name = "ssign"
path = "src/main.rs"

[dependencies]
ssign-core = { version = "0.1.1", path = "ssign-core" }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow = "1"
